Fixed project card alignment & project not updating on admin page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,9 +93,13 @@ mark {
     flex-wrap: wrap;
     max-width: 100%;
     border-radius: 10px !important;
+    flex-direction: column;
     min-height: 100%;
 }
 
-.bottomCard {
-    align-self: flex-end;
+.cardContent {
+    margin-bottom: 10px !important;
+}
+.cardBody {
+    flex: auto
 }
